adding restock controllers
